# CrowdCountingNet

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
configs/: config.yaml
configs/data/: shha.yaml
configs/model/: dsgcnet.yaml
configs/optimizer/: adam.yaml  adamw.yaml
configs/scheduler/: cosine_annealing.yaml  step_lr.yaml
scripts/: predict.py  train.py
src/crowdcount/: __init__.py  engine.py  trainer.py
src/crowdcount/data/: __init__.py  collate.py  dataset.py  loader.py  prepare.py  transforms.py
src/crowdcount/models/: __init__.py  anchor.py  backbone.py  criterion.py  dsgcnet.py  gcn.py  head.py  matcher.py  neck.py  vgg_.py
src/crowdcount/plugins/: __init__.py  gm.py  moe.py  msaa.py
src/crowdcount/utils/: __init__.py  logging.py  misc.py
tests/: conftest.py  test_anchor.py  test_backbone.py  test_datasets.py  test_dino.py  test_dsgc.py  test_engine.py  test_fuse.py  test_gcn.py  test_gm.py  test_head.py  test_loss.py  test_semantic.py  test_train_script.py
