[project]
name = "crowd-counting"
version = "0.1.0"
description = "DSGCNet: Dual-Semantic Graph Convolutional Network for Crowd Counting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "tensorboard>=2.13",
    "numpy>=1.24",
    "scipy>=1.10",
    "pillow>=9.5",
    "opencv-python>=4.7",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "loguru>=0.7",
    "tqdm>=4.65",
    "torch-geometric>=2.3",
    "easydict>=1.10",
    "pytest-cov>=7.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.scripts]
crowdcount-train = "crowdcount.scripts.train:main"
crowdcount-predict = "crowdcount.scripts.predict:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crowdcount"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
